
SVN
-------------------------------

XML:   Resolved issue CASTOR-1720 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for validating <xsd:ID>s during marshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1720
       (Werner - 20061215)

XML:   Resolved issue CASTOR-1737 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added new ClassNameCRStrategy that simply logs such conflicts without possibility of 
       user intervention.
       Details: http://jira.codehaus.org/browse/CASTOR-1737
       (Werner - 20061215)

XML:   Resolved issue CASTOR-1736 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added registry for ClassNameConflictResolutionStrategy implementations.
       Details: http://jira.codehaus.org/browse/CASTOR-1736
       (Werner - 20061214)

XML:   Resolved issue CASTOR-1539 using contribution from Edward Kuns [edward.kuns@aspect.com]
       toArray instead of loop
       Details: http://jira.codehaus.org/browse/CASTOR-1539
       (Edward - 20061213)

XML:   Resolved issue CASTOR-644 using contribution from Edward Kuns [edward.kuns@aspect.com]
       unable to create a file called Con.java on Windows
       Details: http://jira.codehaus.org/browse/CASTOR-644
       (Edward - 20061213)

XML:   Resolved issue CASTOR-1734 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Introduced strategy pattern for class name conflict resolution during code generation (foundation).
       Details: http://jira.codehaus.org/browse/CASTOR-1734
       (Werner - 20061213)

XML:   Resolved issue CASTOR-1693 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved Ant JARs into bin/lib (and thus out of lib), and amended build scripts accordingly.
       Details: http://jira.codehaus.org/browse/CASTOR-1693
       (Werner - 20061213)

JDO:   Resolved issue CASTOR-1688 using contribution from James Abley [james.abley@volantis.com]